update jlink config